infrastructure/tailscale/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: tailscale-operator
